# zhydemo

./: CMakeLists.txt
lib/: zhylib.lib
zhylib/: CMakeLists.txt  version.rc.in  zhylib.cpp  zhylib.h  zhylibConfig.cmake.in
zhytest/: CMakeLists.txt  zhydemo.cpp
